<resources>
    <string name="app_name">Score Keeper</string>
    <string name="teamA">Foxes</string>
    <string name="teamB">Wolves</string>
    <string name="zero">0</string>
    <string name="na">na</string>
    <string name="vs">vs</string>
    <string name="score">score</string>
    <string name="list_metrics_names">Corsi/Fenwick/7Factor</string>
    <string name="button1">5:5 Goal</string>
    <string name="button2">Other goal</string>
    <string name="button3">Shot blocked</string>
    <string name="button4">Shot on post</string>
    <string name="button5">Other attempt</string>
    <string name="button6">Takeaway</string>
    <string name="button7">Completed pass</string>
    <string name="button8">Finished check</string>
</resources>
