<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:id="@+id/score_board"
        style="@style/horizontal_with_top"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row_teams"
            style="@style/horizontal_with_top"
            android:orientation="horizontal">

            <TextView
                style="@style/score_board_team_name"
                android:text="@string/teamA" />

            <TextView
                style="@style/score_board_middle_label"
                android:text="@string/vs" />

            <TextView
                style="@style/score_board_team_name"
                android:text="@string/teamB" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_score"
            style="@style/horizontal_with_bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreFoxes"
                style="@style/score_board_team_score"
                android:text="@string/zero" />

            <TextView
                style="@style/score_board_middle_label"
                android:text="@string/score" />

            <TextView
                android:id="@+id/scoreWolves"
                style="@style/score_board_team_score"
                android:text="@string/zero" />
        </LinearLayout>

        <View style="@style/horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutMargin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/corsiFoxes"
                style="@style/metric"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/fenwickFoxes"
                style="@style/metric"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/sevenFactorFoxes"
                style="@style/metric"
                android:text="@string/na" />

            <TextView
                android:id="@+id/text_metrics"
                style="@style/score_board_middle_label"
                android:layout_width="wrap_content"
                android:text="@string/list_metrics_names"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/corsiWolves"
                style="@style/metric"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/fenwickWolves"
                style="@style/metric"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/sevenFactorWolves"
                style="@style/metric"
                android:text="@string/na" />
        </LinearLayout>

        <View style="@style/horizontal_line" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/score_board">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout style="@style/vertical_layout">

                    <Button
                        style="@style/score_button_foxes"
                        android:onClick="fiveOnFiveGoal"
                        android:text="@string/button1"
                        android:textColor="@color/quatchi_brown_dark" />

                    <Button
                        style="@style/score_button_foxes"
                        android:onClick="otherGoal"
                        android:text="@string/button2"
                        android:textColor="@color/quatchi_brown_dark" />

                    <Button
                        style="@style/score_button_foxes"
                        android:onClick="shotBlocked"
                        android:text="@string/button3"
                        android:textColor="@color/quatchi_brown" />

                    <Button
                        style="@style/score_button_foxes"
                        android:onClick="shotOnPost"
                        android:text="@string/button4"
                        android:textColor="@color/quatchi_brown" />

                    <Button
                        style="@style/score_button_foxes"
                        android:onClick="otherShotAttempt"
                        android:text="@string/button5"
                        android:textColor="@color/quatchi_brown_light" />

                    <Button
                        style="@style/score_button_foxes"
                        android:onClick="takeaway"
                        android:text="@string/button6"
                        android:textColor="@color/quatchi_brown_light" />

                    <Button
                        style="@style/score_button_foxes"
                        android:onClick="completedPass"
                        android:text="@string/button7"
                        android:textColor="@color/quatchi_brown_light" />

                    <Button
                        style="@style/score_button_foxes"
                        android:onClick="finishedCheck"
                        android:text="@string/button8"
                        android:textColor="@color/quatchi_brown_light" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/lineWidth"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/buttonMargin"
                    android:layout_marginTop="@dimen/layoutMargin"
                    android:background="@color/button_default" />

                <LinearLayout style="@style/vertical_layout">

                    <Button
                        style="@style/score_button_wolves"
                        android:onClick="fiveOnFiveGoal"
                        android:text="@string/button1"
                        android:textColor="@color/quatchi_brown_dark" />

                    <Button
                        style="@style/score_button_wolves"
                        android:onClick="otherGoal"
                        android:text="@string/button2"
                        android:textColor="@color/quatchi_brown_dark" />

                    <Button
                        style="@style/score_button_wolves"
                        android:onClick="shotBlocked"
                        android:text="@string/button3"
                        android:textColor="@color/quatchi_brown" />

                    <Button
                        style="@style/score_button_wolves"
                        android:onClick="shotOnPost"
                        android:text="@string/button4"
                        android:textColor="@color/quatchi_brown" />

                    <Button
                        style="@style/score_button_wolves"
                        android:onClick="otherShotAttempt"
                        android:text="@string/button5"
                        android:textColor="@color/quatchi_brown_light" />

                    <Button
                        style="@style/score_button_wolves"
                        android:onClick="takeaway"
                        android:text="@string/button6"
                        android:textColor="@color/quatchi_brown_light" />

                    <Button
                        style="@style/score_button_wolves"
                        android:onClick="completedPass"
                        android:text="@string/button7"
                        android:textColor="@color/quatchi_brown_light" />

                    <Button
                        style="@style/score_button_wolves"
                        android:onClick="finishedCheck"
                        android:text="@string/button8"
                        android:textColor="@color/quatchi_brown_light" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>